--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
  
  <div class="grid">
-     <div class="section1">grid1</div>
+     <div class="section1"></div>
      <div class="section2">grid2</div>
      <div class="section3">grid3</div>
      <div class="section4">grid4</div>
